refactor(solver): renombrar Assignment a Allocation en todo el modulo solver
- SolverAssignment -> SolverAllocation, ClassAssignment -> ClassAllocation,
  OccupancyDto -> SolverOccupancy (consistencia con la familia Solver*)
- SolverPreview.assignments -> allocations (cambia el JSON de respuesta)
- Se elimina ClassroomConstraintProviderTest (obsoleto)